unpackaged/main/default/objects/PF_BillingSettings__c/PF_BillingSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Billing Settings</label>
</CustomObject>