unpackaged/main/default/objects/PF_BillingSettings__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>