unpackaged/main/default/objects/PF_BillingSettings__c/fields/RR_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>RR_Long_Term__c</fullName>
    <label>RR Long Term</label>
    <length>200</length>
    <type>Text</type>
</CustomField>