unpackaged/main/default/objects/PF_BillingSettings__c/fields/RR_Short_Medium_Term__c.field-meta.xml
<CustomField>
    <fullName>RR_Short_Medium_Term__c</fullName>
    <label>RR Short Medium Term</label>
    <length>200</length>
    <type>Text</type>
</CustomField>